Supercluster/Cluster01/Longhorn/Namespace.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
